--- a/index.html
+++ b/index.html
@@ -3,9 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Webaruhaz</title>
+    <script type="module" src="index.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <main class="row">
+        <header>
+            <div class="header" style="width: 120px;"><h1>Webáruház</h1></div>
+        </header>
+        <nav class="navbar navbar-expand-sm bg-light navbar-light">
+            <div class="container-fluid">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="index.html"><img src="kepek/logo.png" alt="Logo"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="index.html">Termékek</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="urlap.html">Személyes adatok</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="admin.html">Admin</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="kosar.html">Kosár</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="termek-valtozo">
+            <div class="container-fluid d-flex gap-4 p-3 border-bottom mx-0 bg-white">
+                <div class="py-2">
+                    <select class="form-select rendezesSzempontok">
+                        <option>Rendezési szempontok</option>
+                        <option value="novekvo">Ár szerint növekvő</option>
+                        <option value="csokkeno">Ár szerint csökkenő</option>
+                    </select>
+                </div>
     
+                <div class="py-2">
+                    <input id="szuro" type="text" class="form-control" placeholder="Szűrési lehetőségek"/>
+                </div>
+            </div>
 </body>
 </html>
