--- a/index.html
+++ b/index.html
@@ -6,20 +6,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Webaruhaz</title>
-    <script type="module" src="index.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="module" src="fuggvenyek.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main class="row">
-        <header>
-            <div class="header" style="width: 120px;"><h1>Webáruház</h1></div>
+    <main class="row mx-auto" style="width: 80%;">
+        <header style="background-color: green; ">
+            <div class="header" style="width: 120px; "><h1>Webáruház</h1></div>
         </header>
         <nav class="navbar navbar-expand-sm bg-light navbar-light">
             <div class="container-fluid">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="index.html"><img src="kepek/logo.png" alt="Logo"></a>
-                    </li>
+                <ul class="navbar-nav me-auto">
                     <li class="nav-item">
                         <a class="nav-link active" href="index.html">Termékek</a>
                     </li>
@@ -29,6 +27,8 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="admin.html">Admin</a>
                     </li>
+                </ul>
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a class="nav-link active" href="kosar.html">Kosár</a>
                     </li>
@@ -36,7 +36,7 @@
             </div>
         </nav>
         <div class="termek-valtozo">
-            <div class="container-fluid d-flex gap-4 p-3 border-bottom mx-0 bg-white">
+            <div class="container-fluid d-flex gap-4 p-3 border-bottom bg-white">
                 <div class="py-2">
                     <select class="form-select rendezesSzempontok">
                         <option>Rendezési szempontok</option>
@@ -49,5 +49,16 @@
                     <input id="szuro" type="text" class="form-control" placeholder="Szűrési lehetőségek"/>
                 </div>
             </div>
+        </div>
+        <article class="container mt-3">
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+            </div>
+        </article>
+        <footer class="bg-light text-dark py-4 mt-2 text-center" style="height: 8vh;">@ Minden jog fenntartva</footer>
+
+    </main>
+    
+    
 </body>
 </html>
+
