--- a/admin.html
+++ b/admin.html
@@ -35,6 +35,48 @@
                 </ul>
             </div>
         </nav>
+
+
+
+        <article>
+            <div class="urlap mx-auto" style="width: 80%;">
+                <form class="was-validated">
+                    <div class="mb-3 mt-3">
+                      <label for="nev" class="form-label">Megnevezés:</label>
+                      <input type="txt" class="form-control" id="nev" pattern="^[A-Z][a-zA-Z]{2,}$" required>
+                      <div class="valid-feedback">Valid.</div>
+                      <div class="invalid-feedback">Név megadása kötelező, nagybetűvel kezd. min 3 betű.</div>
+                    </div>
+                    <div class="mb-3 mt-3">
+                        <label for="nev" class="form-label">Leírás:</label>
+                        <input type="txt" class="form-control" id="leiras" pattern="^[\s\S]+$" required>
+                        <div class="valid-feedback">Valid.</div>
+                        <div class="invalid-feedback">Adjon meg egy rövid leírást</div>
+                    </div>
+
+                    <div class="mb-3">
+                      <label for="kor" class="form-label">Ár:</label>
+                      <input type="number" class="form-control" id="kor" name="kor" required min="0">
+                      <div class="valid-feedback">Valid.</div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="kor" class="form-label">Mennyiség:</label>
+                        <input type="number" class="form-control" id="kor" name="kor" required min="0" max="1000">
+                        <div class="valid-feedback">Valid.</div>
+                        <div class="invalid-feedback">0-1000</div>
+                      </div>
+
+                      <div class="col-auto mb-3">
+                        <button type="submit" id="submit" class="btn btn-primary">Hozzáad</button>
+                    </div>
+                  </form>
+            </div>
+
+            <div class="tablazat mx-auto" style="width: 80%;"></div>
+        </article>
+
+
+
         <footer class="bg-light text-dark py-4 mt-2 text-center" style="height: 8vh;">@ Minden jog fenntartva</footer>
     </main>  
 </body>
